parse/src/parse/MyNewGrammar.java
/* Generated By:JJTree&JavaCC: Do not edit this line. MyNewGrammar.java */
package parse;
import java.io.FileInputStream;
import java.io.FileNotFoundException;

public class MyNewGrammar/*@bgen(jjtree)*/implements MyNewGrammarTreeConstants, MyNewGrammarConstants {/*@bgen(jjtree)*/
  protected static JJTMyNewGrammarState jjtree = new JJTMyNewGrammarState();public static int count = 0; /*四元式标号*/

  public static String tip = ""; /*或语义分析结果*/

  public static int ncount = 0; /*临时变量下标*/

  public static void main(String args []) throws ParseException
  {
    FileInputStream fileStream;
    //根据输入路径读取文件
//    System.out.println("Enter the txt's complete Route:");
//    BufferedReader br = new BufferedReader(new InputStreamReader(System.in));
//    String filename = br.readLine();
//    System.out.println(filename);
//    fileStream = new FileInputStream(filename);
    try
    {
      fileStream = new FileInputStream("C://test.txt");
      MyNewGrammar parser = new MyNewGrammar(fileStream);
      try
      {
        switch (parser.start())
        {
          case 0 :
          System.out.println("OK.");
          break;
          case 1 :
          System.out.println("Goodbye.");
          break;
          default :
          break;
        }
        System.out.println(tip);
      }
      catch (Exception e)
      {
        System.out.println("NOK.");
        System.out.println(e.getMessage());
        parser.ReInit(System.in);
      }
      catch (Error e)
      {
        System.out.println("Oops.");
        System.out.println(e.getMessage());
      }
    }
    catch (FileNotFoundException e1)
    {
      e1.printStackTrace();
    }
  }

  static final public int start() throws ParseException {
 /*@bgen(jjtree) start */
  SimpleNode jjtn000 = new SimpleNode(JJTSTART);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case INT:
      case VOID:
      case MAIN:
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case INT:
        case VOID:
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case VOID:
            jj_consume_token(VOID);
            break;
          case INT:
            jj_consume_token(INT);
            break;
          default:
            jj_la1[0] = jj_gen;
            jj_consume_token(-1);
            throw new ParseException();
          }
          break;
        default:
          jj_la1[1] = jj_gen;
          ;
        }
        jj_consume_token(MAIN);
        jj_consume_token(LC);
        jj_consume_token(RC);
        block();
        jj_consume_token(0);
    jjtree.closeNodeScope(jjtn000, true);
    jjtc000 = false;
    {if (true) return 0;}
        break;
      case 0:
        jj_consume_token(0);
    jjtree.closeNodeScope(jjtn000, true);
    jjtc000 = false;
    {if (true) return 1;}
        break;
      default:
        jj_la1[2] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
    throw new Error("Missing return statement in function");
  }

  static final public void block() throws ParseException {
 /*@bgen(jjtree) block */
  SimpleNode jjtn000 = new SimpleNode(JJTBLOCK);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(LB);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case INT:
      case LONG:
      case FOR:
      case IF:
      case WHILE:
      case ID:
        statementstring();
        break;
      default:
        jj_la1[3] = jj_gen;
        ;
      }
      jj_consume_token(RB);
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  static final public void statementstring() throws ParseException {
 /*@bgen(jjtree) statementstring */
  SimpleNode jjtn000 = new SimpleNode(JJTSTATEMENTSTRING);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      statement();
      isstatement();
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  static final public void isstatement() throws ParseException {
 /*@bgen(jjtree) isstatement */
  SimpleNode jjtn000 = new SimpleNode(JJTISSTATEMENT);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case INT:
      case LONG:
      case FOR:
      case IF:
      case WHILE:
      case ID:
        statementstring();
        break;
      default:
        jj_la1[4] = jj_gen;
        ;
      }
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  static final public void statement() throws ParseException {
 /*@bgen(jjtree) statement */
  SimpleNode jjtn000 = new SimpleNode(JJTSTATEMENT);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case ID:
        assignment();
        break;
      case INT:
      case LONG:
        DeclareStatement();
        break;
      case IF:
        IfStatement();
        break;
      case FOR:
        ForStatement();
        break;
      case WHILE:
        WhileStatement();
        break;
      default:
        jj_la1[5] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  static final public void assignment() throws ParseException {
 /*@bgen(jjtree) assignment */
  SimpleNode jjtn000 = new SimpleNode(JJTASSIGNMENT);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);String variable [ ] = new String [ 2 ]; //其中存储place和offset两个变量。
  String E_place;
  String L_place;
  String L_offset;
    try {
      //赋值语句
        variable = var();
      jj_consume_token(ASSIGN);
      E_place = Expression();
      jj_consume_token(54);
    jjtree.closeNodeScope(jjtn000, true);
    jjtc000 = false;
    L_place = variable [ 0 ];
    L_offset = variable [ 1 ];
    if (L_offset == null)
    {
      count++;
      tip += count + ":\u005ct(\u005ct=:\u005ct,\u005ct" + E_place + "\u005ct,\u005ct_\u005ct,\u005ct" + L_place + ")" + "\u005cr\u005cn";
    }
    else
    {
      count++;
      tip += count + ":\u005ct(\u005ct=:\u005ct,\u005ct" + E_place + "\u005ct,\u005ct_\u005ct,\u005ct" + L_place + "[" + L_offset + "]" + ")" + "\u005cr\u005cn";
    }
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  static final public void DeclareStatement() throws ParseException {
 /*@bgen(jjtree) DeclareStatement */
  SimpleNode jjtn000 = new SimpleNode(JJTDECLARESTATEMENT);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);int width;
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case INT:
        jj_consume_token(INT);
        jj_consume_token(ID);
        id();
    jjtree.closeNodeScope(jjtn000, true);
    jjtc000 = false;
    width = 8;
        break;
      case LONG:
        jj_consume_token(LONG);
        jj_consume_token(ID);
        id();
    jjtree.closeNodeScope(jjtn000, true);
    jjtc000 = false;
    width = 32;
        break;
      default:
        jj_la1[6] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  static final public void id() throws ParseException {
 /*@bgen(jjtree) id */
  SimpleNode jjtn000 = new SimpleNode(JJTID);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 54:
      case 55:
        label_1:
        while (true) {
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case 55:
            ;
            break;
          default:
            jj_la1[7] = jj_gen;
            break label_1;
          }
          jj_consume_token(55);
          jj_consume_token(ID);
        }
        jj_consume_token(54);
        break;
      case LM:
        label_2:
        while (true) {
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case LM:
            ;
            break;
          default:
            jj_la1[8] = jj_gen;
            break label_2;
          }
          jj_consume_token(LM);
          jj_consume_token(CONSTANT);
          jj_consume_token(RM);
        }
        jj_consume_token(54);
        break;
      default:
        jj_la1[9] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  static final public void IfStatement() throws ParseException {
 /*@bgen(jjtree) IfStatement */
  SimpleNode jjtn000 = new SimpleNode(JJTIFSTATEMENT);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);int j, j1;
    try {
      jj_consume_token(IF);
      jj_consume_token(LC);
      Condition();
      jj_consume_token(RC);
    count++;
    j = count;
    tip += count + ":\u005ct(\u005ctj\u005ct,\u005ct_\u005ct,\u005ct_\u005ct,\u005ct" + "#)" + "\u005cr\u005cn";
    tip = tip.replaceAll("j2", (count + 1) + "");
      jj_consume_token(LB);
      isstatement();
      jj_consume_token(RB);
    tip = tip.replaceAll("#", (count + 2) + "");
    count++;
    j = count;
    tip += count + ":\u005ct(\u005ctJ\u005ct,\u005ct_\u005ct,\u005ct_\u005ct,\u005ct" + j + "#)" + "\u005cr\u005cn";
      label_3:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case ELSE:
          ;
          break;
        default:
          jj_la1[10] = jj_gen;
          break label_3;
        }
        jj_consume_token(ELSE);
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case INT:
        case LONG:
        case FOR:
        case IF:
        case WHILE:
        case ID:
          statement();
          break;
        case LB:
          jj_consume_token(LB);
          isstatement();
          jj_consume_token(RB);
          break;
        default:
          jj_la1[11] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
    jjtree.closeNodeScope(jjtn000, true);
    jjtc000 = false;
    tip = tip.replaceFirst(j + "#", (count + 1) + "");
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  static final public void WhileStatement() throws ParseException {
 /*@bgen(jjtree) WhileStatement */
  SimpleNode jjtn000 = new SimpleNode(JJTWHILESTATEMENT);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);Token node;
  int j1;
  int j2;
  int next;
  int next1;
    try {
      jj_consume_token(WHILE);
      jj_consume_token(LC);
    next1 = count + 1;
      Condition();
      jj_consume_token(RC);
    count++;
    j1 = count;
    tip += count + ":\u005ct(\u005ctJ\u005ct,\u005ct_\u005ct,\u005ct_\u005ct,\u005ct" + j1 + "#)" + "\u005cr\u005cn";
      jj_consume_token(LB);
      isstatement();
      jj_consume_token(RB);
    jjtree.closeNodeScope(jjtn000, true);
    jjtc000 = false;
    count++;
    tip += count + ":\u005ct(\u005ctJ\u005ct,\u005ct_\u005ct,\u005ct_\u005ct,\u005ct" + next1 + ")" + "\u005cr\u005cn";
    tip = tip.replaceFirst(j1 + "#", (count + 1) + "");
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  static final public int Condition() throws ParseException {
 /*@bgen(jjtree) Condition */
  SimpleNode jjtn000 = new SimpleNode(JJTCONDITION);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);Token node;
  int next;
  String result;
  String middle;
    try {
      result = Expression();
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case LT:
        node = jj_consume_token(LT);
        middle = Expression();
      count++;
      next = count + 1;
      tip += count + ":\u005ct(\u005ctj<\u005ct,\u005ct" + result + "\u005ct,\u005ct" + middle + "\u005ct,\u005ct" + (next + 1) + ")" + "\u005cr\u005cn";
        break;
      case GT:
        node = jj_consume_token(GT);
        middle = Expression();
      count++;
      next = count + 1;
      tip += count + ":\u005ct(\u005ctj>\u005ct,\u005ct" + result + "\u005ct,\u005ct" + middle + "\u005ct,\u005ct" + (next + 1) + ")" + "\u005cr\u005cn";
        break;
      case GE:
        node = jj_consume_token(GE);
        middle = Expression();
      count++;
      next = count + 1;
      tip += count + ":\u005ct(\u005ctj>=\u005ct,\u005ct" + result + "\u005ct,\u005ct" + middle + "\u005ct,\u005ct" + (next + 1) + ")" + "\u005cr\u005cn";
        break;
      case LE:
        node = jj_consume_token(LE);
        middle = Expression();
      count++;
      next = count + 1;
      tip += count + ":\u005ct(\u005ctj<=\u005ct,\u005ct" + result + "\u005ct,\u005ct" + middle + "\u005ct,\u005ct" + (next + 1) + ")" + "\u005cr\u005cn";
        break;
      default:
        jj_la1[12] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    jjtree.closeNodeScope(jjtn000, true);
    jjtc000 = false;
    {if (true) return next;}
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
    throw new Error("Missing return statement in function");
  }
